# pre_commit_hooks

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
pre_commit_hooks/: __init__.py  conftest.py
pre_commit_hooks/commit_msg_prefix/: __init__.py  entry.py
pre_commit_hooks/commit_msg_prefix/tests/: __init__.py  test_commit_msg_prefix.py  test_entry.py
pre_commit_hooks/linked_todos/: __init__.py  entry.py
pre_commit_hooks/linked_todos/tests/: __init__.py  test_entry.py
pre_commit_hooks/utils/: __init__.py  git.py
pre_commit_hooks/utils/tests/: test_git.py
